tests/diagnostics/negative/import_cycle.vit
space vitte/tests/diagnostics/negative/import_cycle

use cycle/diagnostics/mod as cycle_diag

proc main(args: list[string]) -> int {
  give 0
}

export *
